--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- URL:  -->
+<!-- GitHub URL: https://github.com/lclarke-dce/assignment1 -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -41,50 +41,41 @@
     <div class="container">
         <h1>Hello! Welcome to My World!</h1>
 
+        <h2>First name:</h2>
+        <p>Lee-Anne</p>
 
-<h2>First name:</h2>
-<p>Lee-Anne</p>
+        <h2>Where you grew up:</h2>
+        <p>Philadelphia, PA, USA</p>
 
+        <h2>Your major:</h2>
+        <p>I am pursuing a Graduate Certificate in Front-End Web Development.</p>
 
-<h2>Where you grew up:</h2>
-<p>Philadelphia, PA, USA</p>
+        <h2>A list of any web development background you have (it’s ok if you do not have any):</h2>
+        <ul>
+            <li>HTML</li> 
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Python/Django</li>
+        </ul>
 
+        <h2>A list of any software development background you have (it’s ok if you do not have any):</h2>
+        <p>None</p>
 
-<h2>Your major:</h2>
-<p>I am pursuing a Graduate Certificate in Front-End Web Development.</p>
-
-
-<h2>A list of any web development background you have (it’s ok if you do not have any):</h2>
-<ul>
-    <li>HTML</li> 
-    <li>CSS</li>
-    <li>JavaScript</li>
-    <li>Python/Django</li>
-</ul>
-
-
-<h2>A list of any software development background you have (it’s ok if you do not have any):</h2>
-<p>None</p>
+        <h2>One or two sentences describing why you wanted to take this course:</h2>
+        <p>I wanted to expand my knowledge of SPAs, especially React. I also want to brush up on my JavaScript skills.
 
 
-<h2>One or two sentences describing why you wanted to take this course:</h2>
-<p>I wanted to expand my knowledge of SPAs, especially React. I also want to brush up on my JavaScript skills.
+        <h2>An image that represents your favorite place:</h2>
+        <div>
+            <img src="img/beach.jpg" alt="A beach in Turks & Caicos" />
+            <p class="img-caption">Turks &amp; Caicos</p>
+        </div>
 
+        <h2>A link to your favorite restaurant (open it in a new tab):</h2>
+        <p>
+            <a href="https://www.wearefoundingfarmers.com/" target="_blank">Founding Farmers</a>
+        </p>
 
-<h2>An image that represents your favorite place:</h2>
-<div>
-    <img src="img/beach.jpg" alt="A beach in Turks & Caicos" />
-    <p class="img-caption">Turks &amp; Caicos</p>
-</div>
-
-
-<h2>A link to your favorite restaurant (open it in a new tab):</h2>
-<p>
-    <a href="https://www.wearefoundingfarmers.com/" target="_blank">Founding Farmers</a>
-</p>
-
-
-</div>
-
+    </div>
 </body>
 </html>
